@@ -1070,7 +1070,7 @@ WMSetWidgetBackgroundColor(WMWidget *w, WMColor *color)
 WMColor*
 WMGetWidgetBackgroundColor(WMWidget *w)
 {
-    // shoul retain?
+    // should retain?
     return W_VIEW(w)->backColor;
 }
 
